@@ -1,4 +1,5 @@
 ﻿Sigil v0.2.1 ADD_DATE
+    - created/used 16px version of all icons; icons in menus are not blurry anymore (issue #121)
     - the Find&Replace dialog now uses the currently selected text (if any) as the default search
     term (issue #370)
     - fixed issues with unnecessary reloads of the code view (issue #412, issue #398)
